--- a/client/src/app/groups/group-manage/group-users/group-users.component.html
+++ b/client/src/app/groups/group-manage/group-users/group-users.component.html
@@ -2,7 +2,7 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="6" offset-sm="3">
-        <ion-item *ngFor="let user of members">
+        <ion-item *ngFor="let user of groupMembers$">
           <ion-text>{{ user.name }}</ion-text>
           <ion-button slot="end" (click)="onDelete(user.id)">
             <ion-icon name="trash-outline"></ion-icon>
