--- a/client/src/app/groups/group-manage/group-manage.page.html
+++ b/client/src/app/groups/group-manage/group-manage.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/groups/detail/{{ groupId }}"></ion-back-button>
+      <ion-back-button defaultHref="/groups/detail/{{ groupid }}"></ion-back-button>
     </ion-buttons>
     <ion-title>{{ group ? group.name : null }}</ion-title>
   </ion-toolbar>
@@ -23,25 +23,12 @@
             Update available items and deadline for the {{ group.name }} group.
           </ion-card-content>
         </ion-card>
-        <!-- <ion-card
-          *ngIf="!loading_items"
-          [ngClass]="managing && managing.length && managing !== 'products' ? 'inactive' : 'active'"
-          color="primary"
-          (click)="onSelect('products')">
-          <ion-card-header class="ion-text-center">
-            <ion-card-title>Available Items</ion-card-title>
-          </ion-card-header>
-          <ion-card-content class="ion-text-center">
-            Update available items and deadline for the {{ group.name }} group.
-          </ion-card-content>
-        </ion-card> -->
       </ion-col>
     </ion-row>
 
-    <!-- <ion-row>
+    <ion-row>
       <ion-col size="12">
         <ion-card
-          *ngIf="!loading_summary"
           [ngClass]="managing && managing.length && managing !== 'summary' ? 'inactive' : 'active'"
           color="primary"
           (click)="onSelect('summary')">
@@ -53,7 +40,7 @@
           </ion-card-content>
         </ion-card>
       </ion-col>
-    </ion-row> -->
+    </ion-row>
 
     <ion-row>
       <ion-col size="6">
@@ -107,10 +94,8 @@
 
             <app-group-summary
               *ngSwitchCase="'summary'"
-              [group]="group"
-              [summaryByUser]="summaryByUser"
-              [summaryByItem]="summaryByItem"
               (cancelled)="onCancel()"></app-group-summary>
+
           </ion-card-content>
         </ion-card>
       </ion-col>
