--- a/client/src/app/groups/group-manage/group-summary/group-summary.component.html
+++ b/client/src/app/groups/group-manage/group-summary/group-summary.component.html
@@ -1,7 +1,7 @@
 <ion-card>
   <ion-card-header>
     <ion-card-title class="ion-text-center">Order Summary</ion-card-title>
-    <ion-card-subtitle class="ion-text-center">{{ formatDate(group.deadline) }}</ion-card-subtitle>
+    <ion-card-subtitle class="ion-text-center">{{group$ && formatDate(group$.deadline) }}</ion-card-subtitle>
   </ion-card-header>
 
   <ion-card-content *ngIf="empty">
@@ -20,8 +20,8 @@
       </ion-segment-button>
     </ion-segment>
 
-    <ion-grid *ngIf="display === 'items'">
-      <ion-row *ngFor="let summary of summaryByItem">
+    <ion-grid *ngIf="group$.order && display === 'items'">
+      <ion-row *ngFor="let summary of group$.order.byItem">
         <ion-col size="8" class="ion-text-start">
           <ion-text>{{ summary.itemname }}</ion-text>
         </ion-col>
@@ -31,8 +31,8 @@
       </ion-row>
     </ion-grid>
 
-    <div *ngIf="display === 'users'">
-      <ion-grid *ngFor="let summary of summaryByUser">
+    <div *ngIf="group$.order && display === 'users'">
+      <ion-grid *ngFor="let summary of group$.order.byUser">
         <ion-row>
           <ion-col>{{ summary.username }}</ion-col>
         </ion-row>
