--- a/client/src/app/groups/group-detail/group-detail.page.html
+++ b/client/src/app/groups/group-detail/group-detail.page.html
@@ -3,15 +3,15 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/groups"></ion-back-button>
     </ion-buttons>
-    <ion-title class="ion-text-center">{{ loadingPage ? null : group.name }}</ion-title>
+    <ion-title class="ion-text-center">{{ group$ && group$.name }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content *ngIf="!loadingPage">
+<ion-content *ngIf="group$">
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-md="8" offset-md="2">
-        <h2 class="ion-text-center">{{ group.description }}</h2>
+        <h2 class="ion-text-center">{{ group$.description }}</h2>
       </ion-col>
     </ion-row>
     <ion-row>
