--- a/client/src/app/orders/orders-list/orders-list.page.html
+++ b/client/src/app/orders/orders-list/orders-list.page.html
@@ -1,38 +1,21 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/groups/detail/{{ groupId }}"></ion-back-button>
+      <ion-back-button defaultHref="/groups/detail/{{ groupid }}"></ion-back-button>
     </ion-buttons>
     <ion-title>My Orders</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<!-- <ion-content *ngIf="!loadingOrders"> -->
-<ion-content *ngIf="orders && orders.length">
+<ion-content *ngIf="orders$">
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2">
-        <ion-card *ngIf="archiveIsEmpty">
-          <ion-card-header>
-            Oops!
-          </ion-card-header>
-          <ion-card-content>
-            It seems you have never placed any orders for this group
-          </ion-card-content>
-        </ion-card>
-        <ion-list *ngIf="!archiveIsEmpty">
-          <!-- <ion-item
-            *ngFor="let order of orders"
-            detail
-            (click)="onNavigateToOrderDetails(order)"> -->
+        <ion-list>
           <ion-item
-            *ngFor="let order of orders"
+            *ngFor="let groupOrder of orders$ | keyvalue"
             detail
-            (click)="onNavigateToOrderDetails(order.orderid)">
-            <ion-label>
-              <ion-text>{{ order.groupname }} - {{ formatDate(order.deadline) }}</ion-text>
-            </ion-label>
-          </ion-item>
+            (click)="onNavigateToGroupOrders(groupOrder.key)">{{ groupOrder.key }}</ion-item>
         </ion-list>
       </ion-col>
     </ion-row>
