--- a/client/src/app/groups/group-manage/group-available-orders/group-available-order/group-available-order.page.html
+++ b/client/src/app/groups/group-manage/group-available-orders/group-available-order/group-available-order.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/groups"></ion-back-button>
+    </ion-buttons>
     <ion-title>group-available-order</ion-title>
   </ion-toolbar>
 </ion-header>
