--- a/client/src/app/groups/group-manage/group-users/group-users.component.html
+++ b/client/src/app/groups/group-manage/group-users/group-users.component.html
@@ -3,8 +3,8 @@
     <ion-row>
       <ion-col size="12" size-sm="6" offset-sm="3">
         <ion-item *ngFor="let user of groupMembers$">
-          <ion-text>{{ user.name }}</ion-text>
-          <ion-button slot="end" (click)="onDelete(user.id)">
+          <ion-text>{{ user.username }}</ion-text>
+          <ion-button *ngIf="!user.manager" slot="end" (click)="onDelete(user.id)">
             <ion-icon name="trash-outline"></ion-icon>
           </ion-button>
         </ion-item>
