BOTH: connect removeMemberFromGroup

--- a/client/src/app/groups/group-manage/group-users/group-users.component.html
+++ b/client/src/app/groups/group-manage/group-users/group-users.component.html
@@ -4,7 +4,7 @@
       <ion-col size="12" size-sm="6" offset-sm="3">
         <ion-item *ngFor="let user of groupMembers$">
           <ion-text>{{ user.username }}</ion-text>
-          <ion-button *ngIf="!user.manager" slot="end" (click)="onDelete(user.id)">
+          <ion-button *ngIf="!user.manager" slot="end" (click)="onRemoveMemberFromGroup(user.userid)">
             <ion-icon name="trash-outline"></ion-icon>
           </ion-button>
         </ion-item>
