--- a/client/src/app/orders/place-order/place-order.page.html
+++ b/client/src/app/orders/place-order/place-order.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/groups"></ion-back-button>
+    </ion-buttons>
     <ion-title>place-order</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -16,29 +19,31 @@
             <ion-grid>
               <ion-row>
                 <ion-col size="8">
-                  <h2>{{ item.itemname }}</h2>
+                  <h2>{{ item.item_name }}</h2>
                 </ion-col>
                 <ion-col size="4" class="ion-text-right">
-                  <!-- <ion-badge *ngIf="item.remaining_qty > 0">{{ ordered[item.id] }}</ion-badge> -->
+                  <ion-badge [ngClass]="{'hidden' : !ordered[item.available_item_id] }">{{ ordered[item.available_item_id] }}</ion-badge>
                 </ion-col>
               </ion-row>
 
               <ion-row>
                 <ion-col size="8">
-                  <p>{{ item.itemdescription }}</p>
-                  <p>{{ item.itemprice }}</p>
-                  <p>Available: {{ item.availableitemremainingqty }}</p>
+                  <p>{{ item.item_description }}</p>
+                  <p>{{ item.item_price }}</p>
+                  <p>Available: {{ availableOrderItemsState[item.available_item_id].available }}</p>
                 </ion-col>
                 <ion-col size="4" class="ion-text-right">
                   <div>
                     <ion-icon
+                      [ngClass]="{'disabled' : !availableOrderItemsState[item.available_item_id].available}"
                       name="caret-up-outline"
-                      (click)="onAddToBasket(item.availableitemid, item.availableitemremainingqty)"></ion-icon>
+                      (click)="onAddToBasket(item.available_item_id, availableOrderItemsState[item.available_item_id].available)"></ion-icon>
                   </div>
                   <div>
                     <ion-icon
+                      [ngClass]="{'disabled' : !ordered[item.available_item_id] }"
                       name="caret-down-outline"
-                      (click)="onRemoveFromBasket(item.availableitemid)"></ion-icon>
+                      (click)="onRemoveFromBasket(item.available_item_id)"></ion-icon>
                   </div>
                 </ion-col>
               </ion-row>
@@ -48,7 +53,6 @@
       </ion-col>
     </ion-row>
 
-    <!-- <ion-row *ngIf="orderPending"> -->
     <ion-row>
       <ion-col size="12" size-sm="6" offset-sm="3">
         <ion-button
