--- a/client/src/app/auth/profile/profile.page.html
+++ b/client/src/app/auth/profile/profile.page.html
@@ -11,18 +11,18 @@
 
   <ion-segment
     (ionChange)="profileDisplayChanged($event)"
-    value="userdata">
-    <ion-segment-button value="userdata">
+    [value]="ProfileScreen.USER_DATA">
+    <ion-segment-button [value]="ProfileScreen.USER_DATA">
       <ion-label>My Personal Infos</ion-label>
     </ion-segment-button>
-    <ion-segment-button value="usergroups">
+    <ion-segment-button [value]="ProfileScreen.USER_GROUPS">
       <ion-label>My Groups</ion-label>
     </ion-segment-button>
   </ion-segment>
 
 
   <form #f="ngForm" (ngSubmit)="onSubmitChanges()"
-    *ngIf="user && display === 'userdata'">
+    *ngIf="user$ && display === ProfileScreen.USER_DATA">
     <ion-grid>
       <ion-row>
         <ion-col size="12" size-sm="6" offset-sm="3">
@@ -30,7 +30,7 @@
           <ion-item>
             <ion-input
               type="text"
-              [ngModel]="userName"
+              [ngModel]="user$.username"
               name="user-name"
               required></ion-input>
           </ion-item>
@@ -43,7 +43,7 @@
           <ion-item>
             <ion-input
               type="email"
-              [ngModel]="userEmail"
+              [ngModel]="user$.useremail"
               name="user-email"
               required></ion-input>
           </ion-item>
@@ -56,7 +56,7 @@
           <ion-item>
             <ion-input
               type="phone"
-              [ngModel]="userPhone"
+              [ngModel]="user$.userphone"
               name="user-phone"
               required></ion-input>
           </ion-item>
@@ -68,7 +68,7 @@
           <h3>Contact Me By</h3>
           <ion-item>
             <ion-select
-              [(ngModel)]="userPreferredMode"
+              [(ngModel)]="user$.userpreferredcontactmode"
               name="user-preferred-mode"
               multiple="false"
               okText="OK"
@@ -100,13 +100,13 @@
     </ion-grid>
   </form>
 
-  <ion-card *ngIf="user && display === 'usergroups'">
-    <ion-row *ngFor="let group of userGroups">
+  <ion-card *ngIf="user$ && display === ProfileScreen.USER_GROUPS">
+    <ion-row *ngFor="let group of groups$">
       <ion-col size="12" size-sm="6" offset-sm="3">
         <ion-item-sliding #slidingItem>
           <ion-item>
             <ion-label>
-              {{ group.name }} - {{ group.description }}
+              {{ group.groupname }} - {{ group.groupdescription }}
             </ion-label>
           </ion-item>
           <ion-item-options>
