--- a/client/src/app/groups/groups.page.html
+++ b/client/src/app/groups/groups.page.html
@@ -21,20 +21,19 @@
 
       <ion-col size="12" size-sm="8" offset-sm="2">
 
-        <ion-list *ngIf="(groups$ | async).length; else noGroupsBlock">
+        <ion-list *ngIf="groups$.length; else noGroupsBlock">
           <ion-item
             class="item"
-            *ngFor="let group of (groups$ | async); let i = index;"
+            *ngFor="let group of groups$; let i = index;"
             detail
-            (click)="onNavigateToGroup(group.id)"
-            [routerLink]="['/', 'groups', 'detail', group.id]">
+            (click)="onNavigateToGroup(group.groupid)"
+            [routerLink]="['/', 'groups', 'detail', group.groupid]">
             <ion-thumbnail slot="start">
-              <!-- <ion-img [src]="group.image"></ion-img> -->
               <ion-img [src]="tempBgThumbnail(i)"></ion-img>
             </ion-thumbnail>
             <ion-label>
-              <h2>{{ group.name }}</h2>
-              <p>{{ group.description }}</p>
+              <h2>{{ group.groupname }}</h2>
+              <p>{{ group.groupdescription }}</p>
             </ion-label>
           </ion-item>
         </ion-list>
