--- a/client/src/app/orders/orders-list/orders-group/orders-group.page.html
+++ b/client/src/app/orders/orders-list/orders-group/orders-group.page.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/groups/detail/{{ groupid }}"></ion-back-button>
+    </ion-buttons>
     <ion-title>orders-group</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -10,8 +13,8 @@
       <ion-col size="12" size-sm="8" offset-sm="2">
         <ion-list>
           <ion-item
-            *ngFor="let groupOrder of orders$ | keyvalue"
-            (click)="checkOrderDetails(groupOrder.key)">{{ groupOrder.key }}</ion-item>
+            *ngFor="let order of placedOrders$ | keyvalue"
+            (click)="checkOrderDetails(order.key)">{{ order.deadline }}</ion-item>
         </ion-list>
       </ion-col>
     </ion-row>
